# swagger_server/controllers/ia_controller.py
@@ -1,16 +1,19 @@
 import connexion
 import six
 
+from os import listdir
+from os.path import isfile, exists
+from swagger_server.models.input_ia import InputIA  # noqa: E501
 from swagger_server.models.output import Output  # noqa: E501
 from swagger_server import util
 
 
-def add_output(body, nom_ia, categorie, utilisable):  # noqa: E501
+def add_ia(body, nom_ia, categorie, utilisable):  # noqa: E501
     """Ajoute une nouvelle IA
 
-    Add a new Output to the store # noqa: E501
+    Ajoute une nouvelle IA # noqa: E501
 
-    :param body: Create a new Output in the store
+    :param body: Parametres pour ajouter une IA
     :type body: dict | bytes
     :param nom_ia: Nom de l&#x27;IA
     :type nom_ia: str
@@ -22,18 +25,24 @@ def add_output(body, nom_ia, categorie, utilisable):  # noqa: E501
     :rtype: Output
     """
     if connexion.request.is_json:
-        body = Output.from_dict(connexion.request.get_json())  # noqa: E501
+        body = InputIA.from_dict(connexion.request.get_json())  # noqa: E501
     return 'do some magic!'
 
 
-def find_outputs_by_status(categorie):  # noqa: E501
+def get_ia(categorie):  # noqa: E501
     """Trouve une IA pour répondre à un besoin
 
-    Multiple status values can be provided with comma separated strings # noqa: E501
+    Trouve une IA pour répondre à un besoin # noqa: E501
 
     :param categorie: Status values that need to be considered for filter
     :type categorie: str
 
     :rtype: List[Output]
     """
-    return 'do some magic!'
+    liste_retour = []
+    chemin = f'./toolkit/{categorie}'
+    if(exists(chemin)):
+        for fichier in listdir(chemin):
+            liste_retour.append({"output":fichier})
+
+    return liste_retour
